--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
