--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
