--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@hello-pangea/dnd": "^18.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,7 +12,9 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
@@ -19,6 +22,7 @@
     "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
